--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,7 @@
                 <button class="fas fa-4x decrement"></button>
             </div>
         </div>
+
+        <script src="/app.js"></script>
     </body>
 </html>
