--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="cipharius">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-        <link href="/theme.css" rel="stylesheet">
+        <link href="theme.css" rel="stylesheet">
     </head>
     <body>
         <div id="counter-frame">
@@ -23,6 +23,6 @@
             </div>
         </div>
 
-        <script src="/app.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
