--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,32 @@
     <body>
         <div id="counter-frame">
             <div class="blue counter">
-                <button class="fas fa-4x increment"></button>
-                <div class="value">20</div>
-                <button class="fas fa-4x decrement"></button>
+                <div class="wrapper">
+                    <button class="fas fa-4x increment"></button>
+                    <div class="value">20</div>
+                    <button class="fas fa-4x decrement"></button>
+                </div>
             </div>
             <div class="white counter">
-                <button class="fas fa-4x increment"></button>
-                <div class="value">20</div>
-                <button class="fas fa-4x decrement"></button>
+                <div class="wrapper">
+                    <button class="fas fa-4x increment"></button>
+                    <div class="value">20</div>
+                    <button class="fas fa-4x decrement"></button>
+                </div>
+            </div>
+            <div class="green counter">
+                <div class="wrapper">
+                    <button class="fas fa-4x increment"></button>
+                    <div class="value">20</div>
+                    <button class="fas fa-4x decrement"></button>
+                </div>
+            </div>
+            <div class="red counter">
+                <div class="wrapper">
+                    <button class="fas fa-4x increment"></button>
+                    <div class="value">20</div>
+                    <button class="fas fa-4x decrement"></button>
+                </div>
             </div>
         </div>
 
